# rift

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
rift/core/: scheduler.py
rift/paths/: path_manager.py
tests/: conftest.py  test_test_cases_factory.py
tests/conf/: test_environment.py  test_reader.py
tests/core/: test_mock.py  test_scheduler.py  test_source.py
tests/model/: test_testcase.py
tests/paths/: test_execution_paths.py  test_global_paths.py  test_test_case_paths.py  test_utils.py
tests/utils/: test_module_loading.py
