[tool.poetry]
name = "rift"
version = "0.1.0"
description = "Parametrized Integration Testing framework Tool"
authors = ["Antonio Mariani <antonio.mariani@cmcc.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
pydantic = "^2.8.2"
psutil = "^6.0.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rift = "rift.management:start_from_command_line_interface"
